# codegrep

./: LICENSE  README.md  pyproject.toml  requirements.txt
codegrep/: RegexPatternMatcher.py  SyntaxTreeAnalyzer.py  TreeSitterCodeParser.py  main.py
codegrep/contracts/: ICodeParser.py  IPatternMatcher.py  ISyntaxTreeAnalyzer.py  ScopeHeader.py
src/codegrep/: AnsiCodeFormatter.py  CodeContextAnalyzer.py  HierarchicalContextExtractor.py  SyntaxTreeAnalyzer.py  TreeSitterCodeParser.py  __init__.py  __main__.py  application.py  components_factory.py
src/codegrep/cli/: CodeGrepCLI.py
src/codegrep/config/: config.py  importer.py
src/codegrep/contracts/: CodeLine.py  ContextConfiguration.py  DisplayConfiguration.py  ICodeParser.py  ISyntaxTreeAnalyzer.py  SyntaxAnalysisResult.py
src/codegrep/formating/: SpanHighlighter.py
src/codegrep/formating/contracts/: ISpanHighlighter.py  color_codes.py
src/codegrep/language_detection/: FILETYPE_TO_LANGUAGE_CODE_MAP.py  FileType.py  LanguageCode.py  LanguageCodeDetector.py  MockLanguageCodeDetector.py
src/codegrep/pattern_matching/: RegexPatternMatcher.py
src/codegrep/pattern_matching/contracts/: IPatternMatcher.py  models.py
