[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codegrep"
dynamic = ["version"]
description = "A code searching and formatting tool for developers and AI tools."
authors = [
    {name = "Richard Vlas", email = "vlasrichard@gmail.com"},
]
requires-python = ">=3.11"
dependencies = [
    "colorama>=0.4.6",
    "tree-sitter>=0.25.1",
    "tree-sitter-language-pack>=0.9.0",
]

[project.scripts]
codegrep = "codegrep.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "codegrep.__version__" }